--- a/app/src/main/res/xml/basic_knowledge_bottom_bar.xml
+++ b/app/src/main/res/xml/basic_knowledge_bottom_bar.xml
@@ -2,17 +2,17 @@
 <tabs>
     <tab
         barColorWhenSelected="#bfc0f1"
-        id="@+id/play_android"
+        id="@+id/basic_knowledge"
         icon="@mipmap/play_android_ic_tab_android"
-        title="玩安卓" />
+        title="@string/basic_knowledge_page_tab_name_android" />
     <tab
         barColorWhenSelected="#5b8f4b"
-        id="@+id/tree"
+        id="@+id/knowledge_system"
         icon="@mipmap/play_android_ic_tab_tree"
-        title="知识体系" />
+        title="@string/basic_knowledge_page_tab_name_system" />
     <tab
         barColorWhenSelected="#e72034"
         id="@+id/navigation_data"
         icon="@mipmap/play_android_ic_tab_navigation"
-        title="导航数据" />
+        title="@string/basic_knowledge_page_tab_name_navigation" />
 </tabs>
