--- a/app/src/main/res/xml/recommend_bottom_bar.xml
+++ b/app/src/main/res/xml/recommend_bottom_bar.xml
@@ -4,20 +4,20 @@
         barColorWhenSelected="#bfc0f1"
         icon="@mipmap/recommend_ic_tab_daily_recommendation"
         id="@+id/daily_recommendation"
-        title="每日推荐" />
+        title="@string/recommend_page_tab_name_daily" />
     <tab
         barColorWhenSelected="#5b8f4b"
         icon="@mipmap/recommend_ic_tab_welfare"
         id="@+id/welfare"
-        title="福利" />
+        title="@string/recommend_page_tab_name_welfare" />
     <tab
         barColorWhenSelected="#e72034"
         icon="@mipmap/recommend_ic_tab_custom"
         id="@+id/custom"
-        title="干货定制" />
+        title="@string/recommend_page_tab_name_custom" />
     <tab
         barColorWhenSelected="#e72034"
         icon="@mipmap/recommend_ic_tab_android"
         id="@+id/android"
-        title="安卓" />
+        title="@string/recommend_page_tab_name_android" />
 </tabs>
