修复 测试页面崩溃

--- a/app/src/main/res/menu/base_toolbar_menu.xml
+++ b/app/src/main/res/menu/base_toolbar_menu.xml
@@ -7,8 +7,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_notification"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@mipmap/ic_test"
         android:title="title1"
         app:showAsAction="ifRoom" />
-
 </menu>
