--- a/app/src/main/res/layout/play_android_fragment_root.xml
+++ b/app/src/main/res/layout/play_android_fragment_root.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -13,8 +12,6 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.roughike.bottombar.BottomBar
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:popupTheme="@style/ToolbarPopupTheme"
             android:id="@+id/bottomBar"
             android:layout_width="match_parent"
             android:layout_height="55dp"
@@ -24,7 +21,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:popupTheme="@style/ToolbarPopupTheme" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -36,7 +35,5 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bottomBar">
-
-    </androidx.viewpager.widget.ViewPager>
+        app:layout_constraintTop_toBottomOf="@id/bottomBar" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
