--- a/app/src/main/res/layout/layout_base_list.xml
+++ b/app/src/main/res/layout/layout_base_list.xml
@@ -21,6 +21,7 @@
         android:layout_height="0dp"
         android:layout_above="@id/base_pager_list_bottomLay"
         android:layout_below="@id/base_pager_list_topLay"
+        android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/base_pager_list_bottomLay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
