--- a/app/src/main/res/layout/layout_base_tab.xml
+++ b/app/src/main/res/layout/layout_base_tab.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/act_nav_tab_pager_ll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/act_nav_tab_pager_tl_tab"
